--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "cordova-android": "9.0.0",
     "cordova-sqlite-storage": "^5.1.0",
     "face-api.js": "^0.22.2",
+    "ngx-barcode": "^0.3.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
