--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "ts-node": "~8.3.0",
     "tslib": "^2.0.0",
     "tslint": "~6.1.0",
+    "@ionic/app-scripts": "2.1.4",
     "typescript": "~3.9.5",
     "zone.js": "~0.10.3"
   },
