--- a/package.json
+++ b/package.json
@@ -13,66 +13,36 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "~0.1000.0",
-    "@angular/cli": "~10.0.5",
     "@angular/common": "~10.0.0",
-    "@angular/compiler": "~10.0.0",
-    "@angular/compiler-cli": "~10.0.0",
     "@angular/core": "~10.0.0",
     "@angular/forms": "~10.0.0",
-    "@angular/language-service": "~10.0.0",
     "@angular/platform-browser": "~10.0.0",
     "@angular/platform-browser-dynamic": "~10.0.0",
     "@angular/router": "~10.0.0",
-    "@capacitor/cli": "2.4.0",
     "@capacitor/core": "2.4.0",
     "@ionic-native/camera": "^5.28.0",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
-    "@ionic/angular-toolkit": "^2.3.0",
-    "@ionic/cli": "6.11.0",
     "@ionic/storage": "^2.3.1",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
-    "@types/jasmine": "~3.5.0",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.12.61",
     "@types/webgl2": "0.0.5",
     "body-parser": "^1.19.0",
-    "codelyzer": "^6.0.0",
     "cordova-android": "9.0.0",
-    "cordova-plugin-camera": "^4.1.0",
-    "cordova-plugin-device": "^2.0.2",
-    "cordova-plugin-file": "^6.0.2",
-    "cordova-plugin-ionic-keyboard": "^2.2.0",
-    "cordova-plugin-ionic-webview": "^4.2.1",
-    "cordova-plugin-splashscreen": "^5.0.2",
-    "cordova-plugin-statusbar": "^2.4.2",
-    "cordova-plugin-whitelist": "^1.3.3",
     "cordova-sqlite-storage": "^5.1.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "face-api.js": "^0.22.2",
     "ionic2-calendar": "^0.6.6",
-    "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~3.3.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
     "morgan": "^1.10.0",
     "ngx-barcode": "^0.3.0",
-    "protractor": "~7.0.0",
     "rxjs": "~6.5.5",
-    "ts-node": "~8.3.0",
     "tslib": "^2.0.0",
-    "tslint": "~6.1.0",
-    "typescript": "~3.9.5",
     "zone.js": "~0.10.3",
-    "@ionic/app-scripts": "3.2.4"
+    "@ionic/app-scripts": "^3.2.4",
+    "typescript": "~3.9.5"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1000.0",
@@ -82,6 +52,7 @@
     "@angular/language-service": "~10.0.0",
     "@capacitor/cli": "2.4.0",
     "@ionic/angular-toolkit": "^2.3.0",
+    "@ionic/app-scripts": "^3.2.4",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.12.61",
