--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@ionic/app-scripts": "^3.2.4",
     "typescript": "~3.9.5",
     "@angular/cli": "~10.0.5",
+    "@angular/compiler": "~10.0.0",
     "@angular/compiler-cli": "~10.0.0",
     "@angular-devkit/build-angular": "~0.1000.0"
   },
