--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
   },
   "private": true,
   "dependencies": {
-    "@ionic/cli": "6.11.0",
+    "@angular-devkit/build-angular": "~0.1000.0",
+    "@angular/cli": "~10.0.5",
     "@angular/common": "~10.0.0",
+    "@angular/compiler": "~10.0.0",
+    "@angular/compiler-cli": "~10.0.0",
     "@angular/core": "~10.0.0",
     "@angular/forms": "~10.0.0",
     "@angular/platform-browser": "~10.0.0",
@@ -26,28 +29,29 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
+    "@ionic/app-scripts": "^3.2.4",
+    "@ionic/cli": "6.11.0",
     "@ionic/storage": "^2.3.1",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
     "@types/webgl2": "0.0.5",
+    "angularfire2": "^5.4.2",
     "body-parser": "^1.19.0",
     "cordova-android": "9.0.0",
+    "cordova-browser": "6.0.0",
     "cordova-sqlite-storage": "^5.1.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "face-api.js": "^0.22.2",
+    "firebase": "^8.2.1",
+    "firebase-tools": "^9.0.1",
     "ionic2-calendar": "^0.6.6",
     "morgan": "^1.10.0",
     "ngx-barcode": "^0.3.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.3",
-    "@ionic/app-scripts": "^3.2.4",
     "typescript": "~3.9.5",
-    "@angular/cli": "~10.0.5",
-    "@angular/compiler": "~10.0.0",
-    "@angular/compiler-cli": "~10.0.0",
-    "@angular-devkit/build-angular": "~0.1000.0"
+    "zone.js": "~0.10.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1000.0",
@@ -97,7 +101,8 @@
       "cordova-plugin-file": {}
     },
     "platforms": [
-      "android"
+      "android",
+      "browser"
     ]
   }
 }
